# pyproject-migrator

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
pyproject_migrator/: __init__.py  __main__.py  cli.py  convert.py  result.py
tests/: test_cli.py
tests/__snapshots__/: test_cli.ambr
tests/victim/: mypy.ini  pytest.ini  setup.cfg
