[metadata]
name = victim

[options]
include_package_data = True
python_requires = >=3.6

[flake8]
ignore = E741
max-line-length = 119
max-complexity = 10
ban-relative-imports = all

[isort]
profile = black
multi_line_output = 3

[tool:pytest]
norecursedirs = bower_components node_modules foo bar
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE
filterwarnings =
    error
    default:Exception ignored.*FileIO.*
